multi-tenancy/beanservice-deployment.yaml
# beanservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beanservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beanservice
  template:
    metadata:
      labels:
        app: beanservice
    spec:
      containers:
        - name: beanservice
          image: scalable-coffee-shop-beanservice:1.1
          ports:
            - containerPort: 8080
