multi-tenancy/orderservice-deployment.yaml
# orderservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orderservice
  template:
    metadata:
      labels:
        app: orderservice
    spec:
      containers:
        - name: orderservice
          image: scalable-coffee-shop-orderservice:1.0
          ports:
            - containerPort: 8080
