multi-tenancy/beanservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: beanservice
  name: beanservice
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: beanservice
