multi-tenancy/orderservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: orderservice
  name: orderservice
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8080
  selector:
    app: orderservice
